<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.results.ResultsFragment">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless" 
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button_description" />

    <TextView
        android:id="@+id/textViewConfidenceScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        tools:text="98%" />

    <TextView
        android:id="@+id/textViewConfidenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfidenceScore"
        tools:text="Very Likely True" />

    <TextView
        android:id="@+id/textViewSourcesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sources_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfidenceLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSources"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSourcesLabel"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutResultButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_source" /> 

    <LinearLayout
        android:id="@+id/linearLayoutResultButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            style="@style/Widget.Material3.Button.IconButton" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/ic_save" 
            app:iconSize="40dp"
            app:iconTint="@color/purple_500"
            android:text="@string/save_button"
            android:contentDescription="@string/save_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShare"
            style="@style/Widget.Material3.Button.IconButton" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:icon="@drawable/ic_share" 
            app:iconSize="40dp"
            app:iconTint="@color/purple_500"
            android:text="@string/share_button"
            android:contentDescription="@string/share_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

